[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyhss"
version = "1.0.2"

[project.scripts]
pyhss_api = "pyhss.services.apiService:main"
pyhss_database = "pyhss.services.databaseService:main"
pyhss_diameter = "pyhss.services.diameterService:main"
pyhss_geored = "pyhss.services.georedService:main"
pyhss_gsup = "pyhss.services.gsupService:main"
pyhss_hss = "pyhss.services.hssService:main"
pyhss_log = "pyhss.services.logService:main"
pyhss_metric = "pyhss.services.metricService:main"

[tool.setuptools]
packages = [
	"pyhss.lib",
	"pyhss.lib.gsup",
	"pyhss.lib.gsup.controller",
	"pyhss.lib.gsup.protocol",
	"pyhss.services",
	"pyhss.tools",
]

[tool.setuptools.package-dir]
pyhss = ""
